# aerodisspace-esp32-nrf24l01

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: basic.rs
src/: lib.rs
src/radio/: mod.rs  radio.rs  spi_cmds.rs
