[package]
name = "aerodisspace-esp-nrf24l01"
version = "0.1.0"
authors = ["lnxdxtf <gabrielramosmichaliszen@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A lib to use a gamepad with an ESP32 using the NimBLE"
readme = "README.md"
keywords = ["radio", "nrf24l01", "esp32", "embedded", "spi"]
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["common"]
## COMNMON FEATURES FOR ALL TARGETS
common = ["std", "embassy", "esp-idf-svc/native"]
std = ["esp-idf-svc/alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = "0.34.1"
esp-idf-hal = "0.43"
anyhow = "1.0.80"


[build-dependencies]
embuild = "0.31.3"
